[package]
name = "bluelu"
version = "0.1.0"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="bluelu-tea"
path="src/tea_main.rs"

[dependencies]
clap = "2.33.3"
tokio = { version = "0.2.22", features = [ "full", "tracing" ] }
anyhow = "1.0"
log="0.4.0"
env_logger="0.8.1"
